jwt auth comming together
