# cmd/app/routers.go
@@ -2,41 +2,54 @@ package main
 
 import (
 	"github.com/fmiskovic/go-starter/internal/adapters/handlers"
+	"github.com/fmiskovic/go-starter/internal/adapters/handlers/auth"
 	"github.com/fmiskovic/go-starter/internal/adapters/handlers/user"
 	"github.com/fmiskovic/go-starter/internal/adapters/repos"
 	"github.com/fmiskovic/go-starter/internal/core/configs"
 	"github.com/fmiskovic/go-starter/internal/core/services"
-	jwtware "github.com/gofiber/contrib/jwt"
 	"github.com/gofiber/contrib/swagger"
 	"github.com/gofiber/fiber/v2"
 	"github.com/uptrace/bun"
 )
 
 type Router struct {
-	service    services.UserService
-	app        *fiber.App
-	authConfig configs.AuthConfig
+	service        services.UserService
+	app            *fiber.App
+	authConfig     configs.AuthConfig
+	authMiddleware auth.Middleware
 }
 
 // NewRouter instantiates new user.Router
 func newRouter(db *bun.DB, app *fiber.App, authConfig configs.AuthConfig) Router {
 	repo := repos.NewUserRepo(db)
 	svc := services.NewUserService(repo, authConfig)
-	return Router{service: svc, app: app, authConfig: authConfig}
+	authMiddleware := auth.NewMiddleware(authConfig)
+	return Router{service: svc, app: app, authConfig: authConfig, authMiddleware: authMiddleware}
 }
 
 // initUserRouters initializes user management api.
 func (r Router) initUserRouters() {
 	api := r.app.Group("/api")
 	v1 := api.Group("/v1")
+	userGroup := v1.Group("/user", r.authMiddleware.AdminAuthenticated())
 
 	handler := user.NewHandler(r.service)
 
-	v1.Get("/user/:id", handler.HandleGetById())
-	v1.Get("/user", handler.HandleGetPage())
-	v1.Delete("/user/:id", handler.HandleDeleteById())
-	v1.Post("/user", handler.HandleCreate())
-	v1.Put("/user", handler.HandleUpdate())
+	userGroup.Get("/:id", handler.HandleGetById())
+	userGroup.Get("/", handler.HandleGetPage())
+	userGroup.Delete("/:id", handler.HandleDeleteById())
+	userGroup.Post("/", handler.HandleCreate())
+	userGroup.Put("/", handler.HandleUpdate())
+}
+
+func (r Router) initAuthRouters() {
+	a := r.app.Group("/auth")
+
+	handler := auth.NewHandler(r.service)
+	a.Post("/login", handler.HandleSignIn())
+	a.Post("/register", handler.HandleSignUp())
+	a.Post("/email", handler.HandleConfirmEmail())
+	a.Post("/password", handler.HandleChangePassword())
 }
 
 // initStaticRoutes initializes static view handlers to serve the UI.
@@ -60,11 +73,4 @@ func (r Router) initSwaggerRouters() {
 		Path:     "docs",
 		Title:    "API Documentation",
 	}))
-}
-
-// Protect is auth middleware used to protect endpoints.
-func Protect(secret string) func(ctx *fiber.Ctx) error {
-	return jwtware.New(jwtware.Config{
-		SigningKey: jwtware.SigningKey{Key: []byte(secret)},
-	})
 }
